feat: add JInput gamepad support with DualSense controller support